# komparsa

./: .gitignore  CMakeLists.txt  README.md  br.eng.camargo.komparsa.desktop
src/: CMakeLists.txt  ClientCert.cpp  ClientCert.h  Engine.cpp  Engine.h  Formatter.cpp  Formatter.h  Main.qml  main.cpp
